--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Copy files to server
       uses: appleboy/scp-action@master
       with:
-        host: crm.koolcakes.uk
+        host: islamic.nvinfobase.com
         username: develop
         KEY: ${{ secrets.KEY }}
         port: 22
