--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         username: develop
         KEY: ${{ secrets.KEY }}
         port: 7872
-        source: "dist/admin-example*"
+        source: "dist/admin-example/*"
         target: /var/www/html/islamicapp
         rm: true
         strip_components: 1
