--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Building Angular Files
       run: |
         
-        ng build --prod
+        npm run build --prod
         
     - name: Copy files to server
       uses: appleboy/scp-action@master
