--- a/package.json
+++ b/package.json
@@ -21,12 +21,28 @@
     "@angular/compiler": "~11.0.3",
     "@angular/core": "~11.0.3",
     "@angular/forms": "~11.0.3",
+    "@angular/localize": "~11.0.3",
     "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "@coreui/coreui": "^3.4.0",
     "@coreui/icons": "^1.0.1",
+    "@progress/kendo-angular-buttons": "^6.0.0",
+    "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-dialog": "^5.0.0",
+    "@progress/kendo-angular-dropdowns": "^5.0.0",
+    "@progress/kendo-angular-editor": "^2.3.0",
+    "@progress/kendo-angular-inputs": "^7.0.0",
+    "@progress/kendo-angular-intl": "^3.0.0",
+    "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-layout": "^6.0.0",
+    "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-angular-toolbar": "^4.0.0",
+    "@progress/kendo-angular-treeview": "^5.4.0",
+    "@progress/kendo-drawing": "^1.5.12",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-theme-default": "latest",
     "font-awesome": "^4.7.0",
     "material-icons": "^0.5.1",
     "roboto-fontface": "^0.10.0",
