--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "latest",
+    "angular-datatables": "^12.0.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "material-icons": "^0.5.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.6.0",
@@ -55,7 +59,9 @@
     "@angular-devkit/build-angular": "~0.1100.3",
     "@angular/cli": "~11.0.3",
     "@angular/compiler-cli": "~11.0.3",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.3.33",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
