--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "material-icons": "^0.5.1",
+    "ngx-ui-loader": "^11.0.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.6.0",
     "simple-line-icons": "^2.5.5",
